# Clapeyron.jl

./: .PcSaft.jl.swp  .gitattributes  .gitignore  .saft.jl.swp  AH_test.jl  CITATION.bib  CODE_OF_CONDUCT.md  CSVParser.jl  CombiningRules.jl  Database.jl  HELD.jl  HISTORY.md  IL_like.csv  Ideal.jl  LICENSE.md  Manifest.toml  Methods.jl  NEWS.md  PcSaft.jl  Project.toml  README.md  SAFTVRMie.jl  Salt_like.csv  System.jl  Test.jl  Untitled-Copy1.ipynb  Untitled-Copy2.ipynb  Untitled.ipynb  all_data.json  all_data_PcSaft.json  all_data_SaftVRMie.json  all_data_ogSAFT.json  assoc.csv  assocdata_PCSAFT.csv  assocdata_SAFTgammaMie.csv  bubble_comp.csv  bubble_temp.csv  cosmo.csv  domain.cpp  error_propagation.jl  (+40 more)
.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  Untitled-Copy2-checkpoint.ipynb  Untitled-checkpoint.ipynb
0.6.4/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js  siteinfo.js
GC Method 4/: BBrho.csv  BBsos.csv  EAcp.csv  EArho.csv  EAsos.csv  EBcp.csv  EBrho.csv  EBsos.csv  EmoreEBcp.csv  EmoreEBrho.csv  Emore_EAcp.csv  IL_assoc.csv  IL_like.csv  IL_like_other.csv  IL_unlike.csv  IL_unlike_other.csv  Ideal.csv  Salt_like.csv
IL/: IL_assoc.csv  IL_like.csv  Ideal.csv  Salt_like.csv  density.csv  density_EMIMBF4.csv  heat_capacity.csv  test_IL.jl
database/: data_PCSAFT.csv  data_SAFTVRMie.csv  data_ogSAFT.csv  data_softSAFT.csv  kij_eraser.csv
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: .markdownlint.json  Manifest.toml  Methods.md  OpenSAFT_development.md  OpenSAFT_numerical_methods.md  make.jl  (+3 more)
(+2895 files in other folders)
